--- a/MetaFrm.Razor.Menu.NavMenu(net8.0)/NavMenu.razor
+++ b/MetaFrm.Razor.Menu.NavMenu(net8.0)/NavMenu.razor
@@ -118,7 +118,14 @@
             <div class="app-brand demo ">
                 <a href="#" class="app-brand-link">
                     <span class="app-brand-logo demo">
-                        <img src="@this.LogoImageUrl" data-toggle="tooltip" title="@this.LogoText" width="@this.LogoImageSize.Value.Width" height="@this.LogoImageSize.Value.Height" />
+                        @if (this.LogoImageSize != null)
+                        {
+                            <img src="@this.LogoImageUrl" data-toggle="tooltip" title="@this.LogoText" width="@this.LogoImageSize.Value.Width" height="@this.LogoImageSize.Value.Height" />
+                        }
+                        else
+                        {
+                            @this.LogoText
+                        }
                     </span>
                     <span class="app-brand-text demo menu-text fw-bolder ms-2">@this.LogoText</span>
                 </a>
