버전 업데이트 및 CSS 클래스 수정
`MetaFrm.Razor.Menu.NavMenu(net8.0).csproj` 및 `MetaFrm.Razor.Menu.NavMenu(net9.0).csproj` 파일에서 버전 번호를 각각 `8.0.4.36`과 `9.0.4.36`으로 업데이트했습니다.
또한, `NavMenu.razor` 파일에서 텍스트 굵기를 조정하기 위해 `fw-bolder` 클래스를 `fw-bold`로 변경했습니다.

--- a/MetaFrm.Razor.Menu.NavMenu(net8.0)/NavMenu.razor
+++ b/MetaFrm.Razor.Menu.NavMenu(net8.0)/NavMenu.razor
@@ -135,7 +135,7 @@
                                 @this.LogoText
                             }
                         </span>
-                        <span class="app-brand-text demo menu-text fw-bolder ms-2">@this.LogoText</span>
+                        <span class="app-brand-text demo menu-text fw-bold ms-2">@this.LogoText</span>
                     </a>
 
                     <a href="#" @onclick="() => this.OnLayoutMenuExpandeClick()" class="layout-menu-toggle menu-link text-large ms-auto d-xl-none">
