--- a/MetaFrm.Razor.Menu.NavMenu(net9.0)/NavMenu.razor
+++ b/MetaFrm.Razor.Menu.NavMenu(net9.0)/NavMenu.razor
@@ -135,7 +135,7 @@
                                 @this.LogoText
                             }
                         </span>
-                        <span class="app-brand-text demo menu-text fw-bolder ms-2">@this.LogoText</span>
+                        <span class="app-brand-text demo menu-text fw-bold ms-2">@this.LogoText</span>
                     </a>
 
                     <a href="#" @onclick="() => this.OnLayoutMenuExpandeClick()" class="layout-menu-toggle menu-link text-large ms-auto d-xl-none">
